<resources>
    <string name="app_name">Tenki Forecast</string>
    <string name="tab_text_1">Muscat</string>
    <string name="tab_text_2">Tokyo</string>
    <string name="tab_text_3">California</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_current">Edit Current Location</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="humidity"><font fgcolor='#FFFFFFFF'>{wic-raindrop}</font></string>
    <string name="humidity2"> 45%</string>

    <string name="wind_speed"><font fgcolor='#FFFFFFFF'>{wic-strong-wind}</font></string>
    <string name="wind_speed2"> 20 KMH</string>

    <string name="wind_direction"><font fgcolor='#FFFFFFFF'>{wic-wind-direction}</font></string>
    <string name="wind_direction2"> N</string>

    <string name="visibility"><font fgcolor='#FFFFFFFF' size='16'>{faw-binoculars}</font></string>
    <string name="visibility2"> 6 KM</string>

    <string name="pressure"><font fgcolor='#FFFFFFFF'>{wic-barometer}</font></string>
    <string name="pressure2"> 1011 hPa</string>

    <string name="temperature_tv">%.0f°C</string>
    <string name="low_high_temp_tv">%.0f°/%.0f°</string>
    <string name="humidity_tv">%1$d%%</string>
    <string name="wind_speed_tv">%.1f /KM</string>
    <string name="wind_direction_tv">%1$d°</string>
    <string name="pressure_tv">%.1f hPa</string>
    <string name="visibility_tv">%1$d KM</string>

    <string name="location_id_1">287286</string> <!-- Muscat 287286 -->
    <string name="location_id_2">2643743</string> <!-- London -->
    <string name="location_id_3">1850147</string> <!-- Tokyo -->

    <string name="no_connectivity">No or poor connectivity\nPlease try again later</string>

    <string name="title_activity_map">PINPOINT LOCATION</string>

    <string name="weekly_day">SAT</string>
    <string name="weekly_day_temperature">17° / 24°</string>
    <string name="weekly_day_weather_description">FEW CLOUDS</string>
</resources>
