<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130dp"
    android:layout_height="180dp"
    android:background="@drawable/custom_weekly_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weekly_day"
        android:textAlignment="center"
        android:textColor="@color/light_yellow"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weekly_day_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/weekly_day_temperature"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/weekly_day_weather_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:ico_color="@color/white"
        app:ico_icon="wic-cloud"
        app:ico_size="42dp" />

    <TextView
        android:id="@+id/weekly_day_weather_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weekly_day_weather_description"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="16sp" />

</LinearLayout>