<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:background="@color/background"
    tools:backgroundTint="@color/background"
    tools:context="com.nocakenocode.tenkiforecast.activities.App">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background_light"
        android:fillViewport="true"
        android:visibility="visible">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:backgroundTint="@color/background_light"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:visibility="visible"
            tools:context="com.nocakenocode.tenkiforecast.activities.App$PlaceholderFragment">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="69dp"
                android:layout_marginStart="63dp"
                android:layout_marginTop="148dp"
                android:visibility="visible"
                app:ico_color="@color/white"
                app:ico_icon="wic-day-sunny"
                app:ico_size="78dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@+id/temperature"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/kameron"
                android:text="37°C"
                android:textAllCaps="false"
                android:textColor="@color/temperatureColor"
                android:textSize="78sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_name"
                tools:shadowColor="@color/colorAccent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="SKY IS CLEAR"
                android:textColor="@color/light_grey"
                android:textSize="22sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature" />

            <TextView
                android:id="@+id/low_high_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/kameron"
                android:text="26°/39° C"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/humidity"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/low_high_temp" />

            <TextView
                android:id="@+id/humidity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/humidity2"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/humidity"
                app:layout_constraintTop_toBottomOf="@+id/low_high_temp" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/wind_speed"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/humidity2"
                app:layout_constraintTop_toBottomOf="@+id/low_high_temp" />

            <TextView
                android:id="@+id/wind_speed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/wind_speed2"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/wind_speed"
                app:layout_constraintTop_toBottomOf="@+id/low_high_temp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pressure"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity" />

            <TextView
                android:id="@+id/pressure2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pressure2"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/pressure"
                app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

            <TextView
                android:id="@+id/wind_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/wind_direction"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/wind_speed2"
                app:layout_constraintTop_toBottomOf="@+id/low_high_temp" />

            <TextView
                android:id="@+id/wind_direction2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/wind_direction2"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/wind_direction"
                app:layout_constraintTop_toBottomOf="@+id/low_high_temp" />

            <TextView
                android:id="@+id/weather_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/visibility"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/pressure2"
                app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

            <TextView
                android:id="@+id/weather_visibility3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/visibility2"
                android:textColor="@color/light_grey"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/weather_visibility"
                app:layout_constraintTop_toBottomOf="@+id/wind_speed2" />

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="22dp"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_visibility" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                app:backgroundTint="@color/colorPrimaryDark"
                app:ico_color="@color/white"
                app:ico_icon="faw-map-marker-alt"
                app:ico_size="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                app:backgroundTint="@color/light_grey"
                app:ico_color="@color/white"
                app:ico_icon="faw-map-marker-alt"
                app:ico_size="48dp"
                app:layout_constraintEnd_toStartOf="@+id/fab3"
                app:layout_constraintStart_toEndOf="@+id/fab1"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                app:backgroundTint="@color/light_grey"
                app:ico_color="@color/white"
                app:ico_icon="faw-map-marker-alt"
                app:ico_size="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.875"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="Muscat"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fab1" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvWeekly"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chart" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_popup_sync" />

</android.support.design.widget.CoordinatorLayout>
